--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,6 +9,7 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <%- include ('_header'); %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -27,7 +28,7 @@
         <% } %>
       </tbody>
     </table>
-    <button type="button"><a href="#">Shorten new URL</a></button>
+    <h6><button type="button" <a href='#'>Click here</a> to shorten a new URL</button></h6>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
