--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,7 +10,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <%- include ('_header'); %>
+  <%- include ('partials/_header'); %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -18,6 +18,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit URL</th>
+          <th scope="col">Delete URL</th>
         </tr>
       </thead>
       <tbody>
@@ -25,11 +27,20 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form method="POST" action="/urls/<%= url %>/">
+               <button type="button" class="btn btn-outline-primary">Edit</button>
+              </form>
+           </td>
+           <td>
+            <form method="POST" action="/urls/<%= url %>/delete">
+              <button type="submit" class="btn btn-outline-danger">Delete</button>
+            </form>
+         </td>
           </tr>
         <% } %>
       </tbody>
     </table>
-    <h6><button type="button" <a href='#'>Click here</a> to shorten a new URL</button></h6>
   </main>
   
   <!-- Bootstrap JS -->
