--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,8 +28,8 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
-              <form method="POST" action="/urls/<%= url %>/">
-               <button type="button" class="btn btn-outline-primary">Edit</button>
+              <form method="POST" action="/urls/<%= url %>">
+               <a class="btn btn-outline-primary" href="/urls/<%= url %>">Edit</button>
               </form>
            </td>
            <td>
