--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,20 +7,21 @@
     <div style="text-align: right; clear: left;" class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div style="text-align: right; clear: left;"class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a> 
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Register</a> <!-- updated header to include register tab-->
         <% if (!username) { %>
         <form class="form-inline my-1" method="POST" action="/login">
           <div>
-            <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="<%= username %>">
-            <input class="form-control mr-2" type="text" name="username" placeholder="Username" style="width: 150px">
-            <button type="submit" class="btn btn-outline-primary">Login</button>
+            <input type="text" readonly class="form-control-plaintext" value="<%= username %>">
+            <input class="form-control mr-2" type="text" name="username" placeholder="Username" style="width: 200px">
+            <button type="submit" class="btn btn-outline-dark">Login</button>
           </div> 
         </form>
         <% } else { %>
           <form class="form-inline my-1" method="POST" action="/logout">
             <div>
                <%= username %>
-              <button type="submit" class="btn btn-outline-primary">Logout</button>
+               <button type="submit" class="btn btn-outline-dark">Logout</button>
             </div> <!-- before logout logic implemented - logout by deleting cookies -->
           </form>
           <% } %>
