--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,21 +8,18 @@
       <div style="text-align: right; clear: left;"class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <a class="nav-item nav-link" href="/register">Register</a> <!-- updated header to include register tab-->
-        <% if (!username) { %>
-        <form class="form-inline my-1" method="POST" action="/login">
+        <% if (!user) { %>
+          <br>
           <div>
-            <input type="text" readonly class="form-control-plaintext" value="<%= username %>">
-            <input class="form-control mr-2" type="text" name="username" placeholder="Username" style="width: 200px">
-            <button type="submit" class="btn btn-outline-dark">Login</button>
+           <a class="btn btn-primary" href="/login">Login</a>
+           <a class="btn btn-primary" href="/register">Register</a>
           </div> 
-        </form>
         <% } else { %>
           <form class="form-inline my-1" method="POST" action="/logout">
             <div>
-               <%= username %>
+              Logged in as: <%= user.email %>
                <button type="submit" class="btn btn-outline-dark">Logout</button>
-            </div> <!-- before logout logic implemented - logout by deleting cookies -->
+            </div> 
           </form>
           <% } %>
       </div>
