modify header to include login and register links instead of buttons

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,8 +11,8 @@
         <% if (!user) { %>
           <br>
           <div>
-           <a class="btn btn-primary" href="/login">Login</a>
-           <a class="btn btn-primary" href="/register">Register</a>
+           <a style="color:white" href="/login">Login</a>
+           <a style="color:white" href="/register">Register</a>
           </div> 
         <% } else { %>
           <form class="form-inline my-1" method="POST" action="/logout">
