update header css elements

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,8 +11,8 @@
         <% if (!user) { %>
           <br>
           <div>
-           <a style="color:white" href="/login">Login</a>
-           <a style="color:white" href="/register">Register</a>
+           <a class="navbar-brand" font="16px" padding="8px" style="color:#FFFFFF80" href="/login">Login</a>
+           <a class="navbar-brand" font="16px" padding="8px" style="color:#FFFFFF80" href="/register">Register</a>
           </div> 
         <% } else { %>
           <form class="form-inline my-1" method="POST" action="/logout">
