--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,7 +10,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <%- include ('partials/_header'); %>
+  <%- include('partials/_header'); %> 
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
@@ -26,7 +26,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
             <td>
               <form method="POST" action="/urls/<%= url %>">
                <a class="btn btn-outline-primary" href="/urls/<%= url %>">Edit</button>
