--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -11,20 +11,23 @@
   </head>
   <body>
     <%- include('partials/_header'); %>
+
     <main style="margin: 1em;">
-      <h3>Login</h3>
+      <br>
+      <center><h3>Login</h3></center> 
+      <center>
       <form method="POST" action="/login">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="width: 250px">
+          <input type="email" name="email" class="form-control" placeholder="Enter email" style="width: 250px">
         </div>
-        <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" name="password" class="form-control" id="exampleInputPassword" aria-describedby="passwordHelp" placeholder="Enter password" style="width: 250px">
+          <input type="password" name="password" class="form-control" placeholder="Password" style="width: 250px">
         </div>
+        <br>
         <button type="submit" class="btn btn-primary">Login</button>
       </form>
-      
+    </center>
     </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
