--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -17,20 +17,20 @@
 
 
     <main style="margin: 1em;">
-      <h3>Create Account</h3>
-     
+      <br>
+      <center> <h3>Create Account</h3></center>
+      <center>
       <form method="POST" action="/register">
         <div class="form-group mb-2">
           <label for="email">Email address</label>
           <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" style="width: 250px">
-          <br>
+        <br>
           <label for="password">Password</label>
-          <input type="password" name="password" class="form-control" id="exampleInputPassword" aria-describedby="passwordHelp" placeholder="Password" style="width: 250px">
+          <input type="password" name="password" class="form-control" placeholder="Password" style="width: 250px">
           <br>
           <button type="submit" class="btn btn-primary">Register</button>
-        </div>
       </form>
-      
+    </center>
     </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
