--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,18 +7,22 @@
 </head>
 
 <body>
-  <%- include ('partials/_header'); %>
+  <%- include('partials/_header'); %>
+
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= userUrls[shortURL].longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-        <form>
-          <label>Edit</label>
-          <input name="shortURL">
-          <button type="button" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
+          <div>
+          <h3>Edit</h3>
+          <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+          <div>
+            <label class="form-inline"for="updatedURL">New URL:</label>
+            <input class="form-control" type="text" name="updatedURL" placeholder="http://" style="width: 250px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+          </form>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
