fix element positioning with inline css

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -42,10 +42,10 @@
       </tbody>
     </table>
     <% } else { %>
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid" style="color: white; background-color: cadetblue;">
         <div class="container">
-          <h1 class="display-4">You must be logged in</h1>
-          <p class="lead">to see your URLs.</p>
+          <h1 class="display-4">Welcome to TinyApp</h1>
+          <p class="lead">Please login or register for an account to gain access to all of our exciting features.</p>
         </div>
       </div>
       <% } %>
