--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,10 +1,10 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav  class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div style="text-align: right; clear: left;" class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div style="text-align: right; clear: left; justify-content: end;" class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div style="text-align: right; clear: left;"class="navbar-nav">
         <a font ="system-ui" class="nav-item nav-link" href="/urls">My URLs</a>
         <a font="system-ui" class="nav-item nav-link" href="/urls/new">Create New URL</a>
