--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,7 +16,7 @@
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
           <div>
           <h3>Edit</h3>
-          <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+          <form style="display: flex; justify-content: center;" class="form-inline" action="/urls/<%= shortURL %>" method="POST">
           <div>
             <label class="form-inline"for="updatedURL">New URL:</label>
             <input class="form-control" type="text" name="updatedURL" placeholder="http://" style="width: 250px; margin: 1em">
